<!--
    * Copyright (c) 2015, Nordic Semiconductor
    * All rights reserved.
    *
    * Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:
    *
    * 1. Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.
    *
    * 2. Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the
    * documentation and/or other materials provided with the distribution.
    *
    * 3. Neither the name of the copyright holder nor the names of its contributors may be used to endorse or promote products derived from this
    * software without specific prior written permission.
    *
    * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
    * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
    * HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
    * LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON
    * ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE
    * USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
    */
    -->

<resources>
    <string name="app_name">RGB Arduino Controller</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_animation_selection">AnimationSelection</string>
    <string name="static_color">Static Color</string>
    <string name="fade_color">Fade Color</string>
    <string name="rainbow_cycle">Rainbow Cycle</string>
    <string name="rainbow_chase">Rainbow Chase</string>
    <string name="random_color_chase">Random Color Chase</string>
    <string name="theater_chase">Theater Chase</string>
    <string name="aurora_glow">Aurora Glow</string>
    <string name="title_activity_connect_bluetooth">ConnectBluetooth</string>
    <string name="reverse_animation">Reverse Animation</string>
    <string name="selected_animation">Selected Animation:</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="speed">Speed</string>
    <string name="turn_off">Turn Off</string>
    <string name="submit">Submit</string>
    <string name="select_animation">Select Animation</string>
    <string name="connect_to_bluetooth">Connect to Bluetooth</string>
    <string name="disconnect">Disconnect</string>
<!-- Nordic strings -->
    <string name="ble_not_supported">Bluetooth Low Energy not supported</string>
    <string name="scan">Scan</string>
    <string name="cancel">Cancel</string>
    <string name="paired">paired</string>
    <string name="select_device">Select a device</string>
    <string name="scanning">Scanning for devices...</string>
    <string name="SystemId">SystemId</string>
    <string name="ManufactureId">    ManufactureId</string>
    <string name="OrgId">    OrganizationId</string>
    <string name="ModelNumber">ModelNumber</string>
    <string name="SerialNumber">SerialNumber</string>
    <string name="FirmwareRevision">FirmwareRevision</string>
    <string name="HardwareRevision">HardwareRevision</string>
    <string name="SoftwareRevision">SoftwareRevision</string>
    <string name="ManufactureName">ManufactureName</string>
    <string name="RegCertDataList">RegCertDataList</string>
    <string name="BatteryLevel">    Battery Level</string>
    <string name="popup_title">Quit RGB Arduino Controller</string>
    <string name="popup_message">Do you want to quit this Application?</string>
    <string name="popup_yes">YES</string>
    <string name="popup_no">NO</string>
    <string name="device">Device:</string>
    <string name="no_device">&lt;Select a device&gt;</string>
</resources>
